Converts background image to configurable theme option - Also changes how the theme is displayed (fixed and stretched) - Also adds default images for Barker and Lobby 7

--- a/css/ideabank-theme.css
+++ b/css/ideabank-theme.css
@@ -13,6 +13,14 @@ body {
 
 .backgroundimage1 {
 	background-image: url(../images/background-image-A.jpg);
+    background-attachment: fixed;
+    background-size: cover;
+}
+
+.backgroundimage2 {
+    background-image: url(../images/background-image-B.jpg);
+    background-attachment: fixed;
+    background-size: cover;
 }
 
 #container {
